# astroUFCG

./: .curvenote_api  .gitignore  .pre-commit-hooks.yml  README.md  conf.py  environment,yml  environment.yml  myst.yml  pyproject.toml  requirements.txt
.binder/: apt.txt  environment.yml  postBuild  start  workspace.json  workspace.jupyterlab-workspace
_static/css/: custom.css
content/: _myst.yml  conf.py  myst.yml
content/00_images/cap_01/: timeline.html
content/01_frontmatter/: about.md  about_author.md  cover.md  footer.md  links.md
content/02_main/: index.md
content/02_main/Unidade_01/: 00_Timeline.ipynb  00_Timeline.md  01_Eratostenes.md  02_Raio_da_Terra.ipynb  03_Aristarco.md  03_Radio_da_Lua.ipynb  03_Raio_da_Lua.ipynb
content/02_main/Unidade_02/: 01_sun.ipynb
content/03_backmatter/: biografias.md  exercicios.md  index.md
content/04_notebooks/: index.md
content/05_api/: index.md
content/_build/site/: config.json  myst.search.json  myst.xref.json  objects.inv
content/_build/site/content/: index.json  main.biografias.json  main.cap-1.json  main.cap.json  main.eratostenes.json  main.index.json  main.intro.json
content/_build/site/public/: 002_01_eratostenes-02424dd5a5fe96b0c20e630dc01e6797.ipynb  002_01_eratostenes-06400549738d94028dd8c894178ac810.ipynb  002_01_eratostenes-0975f48c7789256f1c506d546c59c7aa.ipynb  002_01_eratostenes-0f542f4f90888b5c15d5b2f2e85087ea.ipynb  002_01_eratostenes-12e0341100e53225db562f939947e84f.ipynb  002_01_eratostenes-1e28e74ddfb3dfcef82381496dd81eab.ipynb  002_01_eratostenes-4edf5a4e405805d2da4c083205bf9c2c.ipynb  002_01_eratostenes-524adb45ff50cd82e9a3134356740933.ipynb  002_01_eratostenes-65db93407c7f7a7b5f84f8481d643424.ipynb  002_01_eratostenes-7cde37390a30e2e68dc91e59ae1ffa69.ipynb  002_01_eratostenes-9827df614edb34903c9148fb639b37fa.ipynb  002_01_eratostenes-a3f0a0d0b684cbd0f1726d4553f89e61.ipynb  002_01_eratostenes-afd14dc0d93310e54e08072ee267a4a8.ipynb  002_01_eratostenes-b5866e0f11efff94056aa0b27fddc095.ipynb  002_01_eratostenes-b9325eee1e2698ddc3fa2039b8a6dc53.ipynb  002_01_eratostenes-bf5e116ec66756673f6113ee17899505.ipynb  002_01_eratostenes-d6b8c5cfd5e98cffba5211aab70be7db.ipynb  002_01_eratostenes-e0822c8ed8697de9f492fe1940ef4d8c.ipynb  002_01_eratostenes-f4f8aaee1bf3d6d24edccd1cac4de05a.ipynb  002_01_eratostenes-f9fb49fbc9be7f84c8275446e9cd662e.ipynb  biografias-7b2c1c4b7e8441dd6f7cb239f053a00e.md  biografias-e59ed47e2496047983f615fa3d0d8ca1.md  eratostenes-f8d0ccd1b827455ad6c8d0b3b6005914.ipynb  index-243ff20f9b28087c3a2aba1465d1ad62.md  index-5723b8dd67f89818ee1ac0b786d8cb59.md
content/frontmatter/: cover.ipynb  cover.md  footer.md  links.md
content/main/: 000_intro.md  001_cap.md  002.ipynb  002_01_eratostenes.ipynb  biografias.md
data/history/: timeline.csv
data/misc/: imagens.csv
data/skyfield/: de431_excerpt.bsp
notebooks/: 001_01_eratostenes.ipynb  00_Timeline.ipynb  00_images.ipynb  03_Radio_da_Lua.ipynb  04_Tycho_Kepler.ipynb  eratostenes.ipynb  skychart.ipynb  timeline.ipynb
src/astroufcg/: astronomy.py  main.py
src/astroufcg/astro/: SPECUTILS.py  utils_POLIASTRO.py
src/astroufcg/grecia/: aristarco.py  eratostenes.py
src/astroufcg/medidas_historicas/: astronomy.py  eratostenes.py
src/utils/: files.py  image_utils.py  timeline.py
structure/: abbreviations.yml  math_macros.yml
