[project]
name = "astroUFCG"
version = "0.1.0"
description = "Custo de Introdução à Astronomia e Astrofísica para o curso de Física da UFCG"
authors = [
    { name = "Luciano Barosi", email = "luciano.barosi@professor.ufcg.edu.br" }
]

license = "MIT"
readme = "README.md"
keywords = ["Astronomy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

requires-python = ">=3.12, <3.14"

dependencies = [
    "astropy (>=7.1.0,<8.0.0)",
    "astroquery (>=0.4.10,<0.5.0)",
    "colour-science (>=0.4.6,<0.5.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipyvtklink (>=0.2.3,<0.3.0)",
    "jupyter-contrib-nbextensions (>=0.7.0,<0.8.0)",
    "jupyter-server (>=2.16.0,<3.0.0)",
    "jupyterlab-widgets (>=3.0.15,<4.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "mdit-py-plugins (>=0.4.2,<0.5.0)",
    "mystmd (>=1.4.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "osmnx (>=2.0.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pip (>=25.1.1,<26.0.0)",
    "pydata-sphinx-theme (>=0.16.1,<0.17.0)",
    "pyvista[jupyter] (>=0.45.2,<0.46.0)",
    "pyvistaqt (>=0.11.2,<0.12.0)",
    "rich (>=14.0.0,<15.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "skyfield (>=1.53,<2.0)",
    "sphinx-autodoc2 (>=0.5.0,<0.6.0)",
    "sphinx-copybutton (>=0.5.2,<0.6.0)",
    "sphinx-design (>=0.6.1,<0.7.0)",
    "sphinx-togglebutton (>=0.3.2,<0.4.0)",
    "sphinxcontrib-mermaid (>=1.0.0,<2.0.0)",
    "trame-jupyter-extension (>=2.1.4,<3.0.0)",
]


[project.urls]
Homepage = "https://barosil.github.io/astroUFCG/"
Code_Repository = "https://github.com/barosil/astroUFCG/tree/main"
Dynamic_Content = "https://lbarosi.curve.space/"


[tool.poetry]

packages = [
    { include = "src/astroufcg" }
]






[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
myst-parser = "^4.0.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"