[project]
name = "astroufcg"
version = "0.1.0"
description = "Curso de Introdução à Astronomia e Astrofísica para o curso de Física da UFCG"
authors = [
    { name = "Luciano Barosi", email = "luciano.barosi@professor.ufcg.edu.br" }
]

license = "MIT"
readme = "README.md"
keywords = ["Astronomy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

requires-python = ">=3.12, <3.14"

dependencies = [
]


[project.urls]
Homepage = "https://barosil.github.io/astroUFCG/"
Code_Repository = "https://github.com/barosil/astroUFCG/tree/main"
Dynamic_Content = "https://lbarosi.curve.space/"


[tool.poetry]

packages = [
    { include = "src/" },
    { include = "astroufcg", from = "src" },
    { include = "utils", from = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
